tests/ui/consts/do-not-ice-on-field-access-of-err-type.stderr
error: constant evaluation is taking a long time
  --> $DIR/do-not-ice-on-field-access-of-err-type.rs:5:24
   |
LL |     let array = [(); { loop {} }];
   |                        ^^^^^^^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/do-not-ice-on-field-access-of-err-type.rs:5:22
   |
LL |     let array = [(); { loop {} }];
   |                      ^^^^^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error[E0282]: type annotations needed for `({integer},)`
  --> $DIR/do-not-ice-on-field-access-of-err-type.rs:7:9
   |
LL |     let tup = (7,);
   |         ^^^
   |
help: consider giving `tup` an explicit type, where the type for tuple `({integer},)` is specified
   |
LL |     let tup: ({integer},) = (7,);
   |            ++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
